fix: placeholder on mobile

--- a/style.css
+++ b/style.css
@@ -338,7 +338,9 @@ main article {
     border: 1px solid var(--accent-alternate-color);
     width: 100%;
     height: 100%;
+    min-height: 8em;
     position: relative;
+    box-sizing: border-box;
 }
 
 .concert-placeholder .fa-placeholder {
